# openchess

./: .gitignore  Cargo.toml  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
apps/master-insert/: .env.template  .gitignore  Cargo.toml  debug.bash  package.json
apps/master-insert/migrations/: 20240930222738_prepare_master_populate.up.sql  20241001030029_finish_import.up.sql  20241001044928_create_indexes.down.sql
apps/master-insert/pgn_scripts/: make_masters.py  twic.bash
apps/master-insert/src/: enums.rs  main.rs
apps/master-insert/src/compression/: mod.rs  pgn_compress.rs
apps/openchess_web/: eslint.config.js  next.config.js  next.config.mjs  package.json  tsconfig.json
apps/openchess_web/public/: chess_compression_bg.wasm
apps/openchess_web/src/: env.js
apps/supabase/: config.toml  package.json
apps/supabase/migrations/: 20240922160429_smaller_index.sql  (+1 more)
apps/web/: next.config.js  pnpm-lock.yaml
apps/web/src/lib/wasm/: Cargo.toml  controller.ts  index.ts
benches/: compression_benchmark.rs
master-insert/: .gitignore  Cargo.toml  make_masters.py
master-insert/migrations/: 20240930185128_init_tables.down.sql  20241001030029_finish_import.down.sql  20241001044928_create_indexes.up.sql  20241001063511_fuzzy_name.up.sql
master-insert/pgn_scripts/: make_tester.py  unzip_append.bash
master-insert/src/: enums.rs  import.rs  lib.rs  main.rs  test.rs
master-insert/src/compression/: fen_compress.rs
src/: fen_compress.rs  huffman_code.rs  import.rs  import_pgn.rs  lib.rs  main.rs  pgn_compress.rs  psqt.rs
src/compression/: fen_compress.rs  mod.rs
supabase/: .env.example  .gitignore  config.toml  package.json
supabase/functions/: package.json
supabase/migrations/: 20000000000000_vault.sql.example  20240921194310_create_chess_tables.sql  20240921224144_init.sql  20240921233331_first.sql  20241009045106_fdw.sql  20250228181638_anon_fdw_access.sql
web/: .gitignore  package.json  tsconfig.json
web/src/: env.js
web/src/app/: page.tsx
(+70 files in other folders)
