[package]
name = "fen_compression"
version = "0.1.0"
edition = "2021"

[dependencies]
shakmaty = "0.27"
pgn-reader = "0.26"

huffman-compress = "0.6"

bit-vec = "0.6.3"
thiserror = "1.0"

actix-web = "4.5.1"
actix-rt = "2"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

reqwest = { version = "0.12", features = ["blocking", "json"] }

serde_json = "1.0"

actix-cors = "0.7.0"
btoi = "0.4"
serde_with = "3"
crossbeam = "0.8"
zstd = "0.13"
time = "0.3"
chrono = "0.4"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
] }

dotenv = "0.15.0"
