[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shakmaty = "0.27"
pgn-reader = "0.26"

huffman-compress = "0.6"

bit-vec = "0.6.3"
thiserror = "1.0"
wasm-bindgen = "0.2.9"
wasm-bindgen-test = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.9.0"
btoi = "0.4.3"
